--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
     <div class="container">
         <h2 class="section-title">Featured Products</h2>
         <div class="product-grid">
+            <!-- Original Products -->
             <div class="product-card">
-                <img src="images/1.jpg" alt="Classic French Tips" class="product-img">
+                <img src="https://via.placeholder.com/300x300" alt="Press-On Nails" class="product-img">
                 <div class="product-info">
                     <h3 class="product-title">Classic French Tips</h3>
                     <p class="product-price">$18.99</p>
@@ -11,7 +12,7 @@
                 </div>
             </div>
             <div class="product-card">
-                <img src="images/2.jpg" alt="Glitter Galaxy" class="product-img">
+                <img src="https://via.placeholder.com/300x300" alt="Press-On Nails" class="product-img">
                 <div class="product-info">
                     <h3 class="product-title">Glitter Galaxy</h3>
                     <p class="product-price">$22.99</p>
@@ -19,7 +20,7 @@
                 </div>
             </div>
             <div class="product-card">
-                <img src="images/3.jpg" alt="Matte Elegance" class="product-img">
+                <img src="https://via.placeholder.com/300x300" alt="Press-On Nails" class="product-img">
                 <div class="product-info">
                     <h3 class="product-title">Matte Elegance</h3>
                     <p class="product-price">$19.99</p>
@@ -27,10 +28,44 @@
                 </div>
             </div>
             <div class="product-card">
-                <img src="images/4.jpg" alt="Floral Fantasy" class="product-img">
+                <img src="https://via.placeholder.com/300x300" alt="Press-On Nails" class="product-img">
                 <div class="product-info">
                     <h3 class="product-title">Floral Fantasy</h3>
                     <p class="product-price">$24.99</p>
+                    <a href="#" class="btn">Add to Cart</a>
+                </div>
+            </div>
+
+            <!-- Additional Product Images -->
+            <div class="product-card">
+                <img src="images/1.jpg" alt="Product 1" class="product-img">
+                <div class="product-info">
+                    <h3 class="product-title">New Collection 1</h3>
+                    <p class="product-price">$20.99</p>
+                    <a href="#" class="btn">Add to Cart</a>
+                </div>
+            </div>
+            <div class="product-card">
+                <img src="images/2.jpg" alt="Product 2" class="product-img">
+                <div class="product-info">
+                    <h3 class="product-title">New Collection 2</h3>
+                    <p class="product-price">$21.99</p>
+                    <a href="#" class="btn">Add to Cart</a>
+                </div>
+            </div>
+            <div class="product-card">
+                <img src="images/3.jpg" alt="Product 3" class="product-img">
+                <div class="product-info">
+                    <h3 class="product-title">New Collection 3</h3>
+                    <p class="product-price">$22.99</p>
+                    <a href="#" class="btn">Add to Cart</a>
+                </div>
+            </div>
+            <div class="product-card">
+                <img src="images/4.jpg" alt="Product 4" class="product-img">
+                <div class="product-info">
+                    <h3 class="product-title">New Collection 4</h3>
+                    <p class="product-price">$23.99</p>
                     <a href="#" class="btn">Add to Cart</a>
                 </div>
             </div>
