--- a/index.html
+++ b/index.html
@@ -1,74 +1,84 @@
-<section class="featured" id="featured">
-    <div class="container">
-        <h2 class="section-title">Featured Products</h2>
-        <div class="product-grid">
-            <!-- Original Products -->
-            <div class="product-card">
-                <img src="https://via.placeholder.com/300x300" alt="Press-On Nails" class="product-img">
-                <div class="product-info">
-                    <h3 class="product-title">Classic French Tips</h3>
-                    <p class="product-price">$18.99</p>
-                    <a href="#" class="btn">Add to Cart</a>
-                </div>
-            </div>
-            <div class="product-card">
-                <img src="https://via.placeholder.com/300x300" alt="Press-On Nails" class="product-img">
-                <div class="product-info">
-                    <h3 class="product-title">Glitter Galaxy</h3>
-                    <p class="product-price">$22.99</p>
-                    <a href="#" class="btn">Add to Cart</a>
-                </div>
-            </div>
-            <div class="product-card">
-                <img src="https://via.placeholder.com/300x300" alt="Press-On Nails" class="product-img">
-                <div class="product-info">
-                    <h3 class="product-title">Matte Elegance</h3>
-                    <p class="product-price">$19.99</p>
-                    <a href="#" class="btn">Add to Cart</a>
-                </div>
-            </div>
-            <div class="product-card">
-                <img src="https://via.placeholder.com/300x300" alt="Press-On Nails" class="product-img">
-                <div class="product-info">
-                    <h3 class="product-title">Floral Fantasy</h3>
-                    <p class="product-price">$24.99</p>
-                    <a href="#" class="btn">Add to Cart</a>
-                </div>
-            </div>
-
-            <!-- Additional Product Images -->
-            <div class="product-card">
-                <img src="images/1.jpg" alt="Product 1" class="product-img">
-                <div class="product-info">
-                    <h3 class="product-title">New Collection 1</h3>
-                    <p class="product-price">$20.99</p>
-                    <a href="#" class="btn">Add to Cart</a>
-                </div>
-            </div>
-            <div class="product-card">
-                <img src="images/2.jpg" alt="Product 2" class="product-img">
-                <div class="product-info">
-                    <h3 class="product-title">New Collection 2</h3>
-                    <p class="product-price">$21.99</p>
-                    <a href="#" class="btn">Add to Cart</a>
-                </div>
-            </div>
-            <div class="product-card">
-                <img src="images/3.jpg" alt="Product 3" class="product-img">
-                <div class="product-info">
-                    <h3 class="product-title">New Collection 3</h3>
-                    <p class="product-price">$22.99</p>
-                    <a href="#" class="btn">Add to Cart</a>
-                </div>
-            </div>
-            <div class="product-card">
-                <img src="images/4.jpg" alt="Product 4" class="product-img">
-                <div class="product-info">
-                    <h3 class="product-title">New Collection 4</h3>
-                    <p class="product-price">$23.99</p>
-                    <a href="#" class="btn">Add to Cart</a>
-                </div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>NailGlam - Premium Press-On Nails</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <header>
+        <div class="container">
+            <h1 class="logo">NailGlam</h1>
+            <nav>
+                <ul>
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="#shop">Shop</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+            </nav>
+            <div class="cart">
+                🛒 <span id="cart-count">0</span>
             </div>
         </div>
-    </div>
-</section>
+    </header>
+
+    <section class="hero" id="home">
+        <h2>Luxury Press-On Nails</h2>
+        <p>Salon-quality nails at your fingertips!</p>
+        <a href="#shop" class="btn">Shop Now</a>
+    </section>
+
+    <section class="shop" id="shop">
+        <h2 class="section-title">Our Collection</h2>
+        <div class="product-grid">
+            <div class="product">
+                <img src="images/1.jpg" alt="Nail Design 1">
+                <h3>Classic French Tips</h3>
+                <p>$18.99</p>
+                <button class="add-to-cart">Add to Cart</button>
+            </div>
+            <div class="product">
+                <img src="images/2.jpg" alt="Nail Design 2">
+                <h3>Glitter Galaxy</h3>
+                <p>$22.99</p>
+                <button class="add-to-cart">Add to Cart</button>
+            </div>
+            <div class="product">
+                <img src="images/3.jpg" alt="Nail Design 3">
+                <h3>Matte Elegance</h3>
+                <p>$19.99</p>
+                <button class="add-to-cart">Add to Cart</button>
+            </div>
+            <div class="product">
+                <img src="images/4.jpg" alt="Nail Design 4">
+                <h3>Floral Fantasy</h3>
+                <p>$24.99</p>
+                <button class="add-to-cart">Add to Cart</button>
+            </div>
+        </div>
+    </section>
+
+    <section class="about" id="about">
+        <h2>About Us</h2>
+        <p>NailGlam offers premium, handcrafted press-on nails that are stylish, durable, and easy to apply.</p>
+    </section>
+
+    <section class="contact" id="contact">
+        <h2>Contact Us</h2>
+        <form id="contact-form">
+            <input type="text" placeholder="Your Name" required>
+            <input type="email" placeholder="Your Email" required>
+            <textarea placeholder="Your Message" required></textarea>
+            <button type="submit">Send</button>
+        </form>
+    </section>
+
+    <footer>
+        <p>&copy; 2025 NailGlam. All rights reserved.</p>
+    </footer>
+
+    <script src="script.js"></script>
+</body>
+</html>
