--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div class="product-grid">
       <!-- Product Card 1 -->
       <div class="product-card">
-        <img src="images/1.jpg" alt="Rose Gold Nails">
+        <img src="images/IMG_9057.HEIC" alt="Rose Gold Nails">
         <h3>Rose Gold Glam</h3>
         <p class="price">$14.99</p>
         <button onclick="addToCart('rose-gold','Rose Gold Glam',14.99)">Add to Cart</button>
